# AegisServer

./: CMakeLists.txt  README.md
app/: main.cpp
benchmark/: ab_test.sh  wrk.lua
config/: server.conf
core/buffer/: buffer.cpp  buffer.h
core/config/: config.cpp  config.h
core/http/: http_conn.cpp  http_conn.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h
core/log/: logger.cpp  logger.h
core/metrics/: metrics.cpp  metrics.h
core/net/: epoller.cpp  epoller.h  socket_util.cpp  socket_util.h
core/server/: server.cpp  server.h
core/threadpool/: thread_pool.cpp  thread_pool.h
core/timer/: timer_manager.cpp  timer_manager.h
modules/guard/: connection_guard.cpp  connection_guard.h  rate_limiter.cpp  rate_limiter.h
static/: 403.html  404.html  429.html  index.html
